--- a/styles/base.css
+++ b/styles/base.css
@@ -61,12 +61,13 @@ nav ul{
 }
 
 li{
-  list-style: none;
+  list-style: disc;
 }
 
 nav a{
   color:var(--fourth-color);
 }
+
 
 a{
   text-decoration: none;
@@ -142,6 +143,12 @@ nav a:hover{
 }
 
 /* Buttons */
+
+#hamburger.open::before {
+  content: "✖️";
+  display: block;
+  z-index: 20; /* Ensure it appears above other elements */
+}
 
 .filter-buttons button {
   background: #fff;
@@ -253,6 +260,10 @@ footer{
 
 /* Small viewports only */
 @media (max-width: 640px) {
+  body {
+    font-size: 1.2rem;
+  }
+
   #hamburger {
     display: flex;
   }
@@ -268,30 +279,10 @@ footer{
   }
 
   nav ul.open {
-    display: flex;
-  }
-}
-
-
-
-
-
-/* small views */
-
-@media (max-width:640px) {
-  
-  /* Dark Theme */
-  .dark-theme {
-  --main-bg-color: #000000;
-  --main-text-color: #ffffff;
-  }
-  
-  main{
     display: block;
   }
 
-  .card{
-    margin: 10px;
+  .main-content {
+    display: block;
   }
-
 }
