--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,4 +1,11 @@
 @media only screen and (min-width:38rem) {
+  body {
+  max-width: 1200px;
+  min-height: 900px;
+  margin: 0 auto;
+  font-family: "Lobster", "Noto Sans", sans-serif;  
+  }
+
   #myButton {
     display: none;
   }
