--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -14,36 +14,52 @@
   --moonstone-2: #06B1CAff;
 }
 
-
 header{
   display: grid;
   grid-template-columns: 44px auto 44px;
+  grid-template-rows: 1fr;
   align-items: end;
 }
 
-header img{
-  border-radius: 50%;
+header section{
+  grid-column:1/3;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-nav {
-  background-color: #154e13;
+header section>img{
+  border-radius: 50%;
+  justify-self: center;
+  align-self: center;
 }
 
 #myButton::before {
   content: "\2630";
-  color: #154e13;
+  color: var(--van-dyke);
 }
 
 #myButton{
   font-size: 2rem;
   background: none;
   border: none;
-  color: #fff;
+  color: var(--engineering-orange);
   cursor: pointer;
   width: 100%;
   text-align: right;
   padding: .25rem 2vw;
 } 
+
+.menu {
+	margin: 1rem auto;
+	padding: 0.5rem;
+	background-color: var(--van-dyke);
+	text-align: center;
+
+	button {
+		padding: 0.5rem 1rem;
+		font-weight: 700;
+	}
+}
 
 ul.menuLinks li a{
   display: block;
@@ -67,11 +83,12 @@ ul.menuLinks a:hover {
 
 #myButton.open::before {
   content: "\2612";
-  color: #154e13;
+  color: var(--redwood);
 }
 
 nav{
   display: grid;
+  background-color: var(--van-dyke);
   grid-template-rows: 0fr;
   transition: grid-template-rows 0.5s ease-in-out;
   
@@ -94,7 +111,7 @@ main {
   max-width: 800px;
   padding: 20px;
   box-shadow: 0 4px 16px rgba(0,0,0,0.75); /* Add shadow */
-  border: 2px solid #ccc;                   /* Add border */
+  border: 2px solid var(--redwood);                /* Add border */
   border-radius: 10px;                       /* Optional: rounded corners */
 }
 
@@ -104,49 +121,124 @@ img{
 }
 
 header{
-  background-color: var(--main-bg-color);
+  background-color: var(--moonstone);
   padding: 20px;
   text-align: center;
 }
 
 h1{
-  color: var(--main-text-color);
+  color: var(--black);
 }
 
 h2{
-  color: var(--primary-color);
+  color: var(--black-2);
   text-align: center;
 }
 
 p{
-  font-family: var(--h2-font);
-  color: var(--main-text-color);
+  font-family: var(--main-font);
+  color: var(--black-3);
   line-height: 1.6;
   text-align: center;
 }
 section{
   margin: 10px 0;
-  
-  background-color: var(--third-color);
   border-radius: 5%;
   padding: 10px;
 }
 
-/* Example grid container */
-#cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 1.5rem;
-  justify-items: center; /* This centers the content (including images) horizontally */
-  align-items: center;    /* This centers the content vertically (optional) */
+a {
+  color: color-mix(in srgb, var(--engineering-orange) 70%, transparent);
+  text-decoration: none;
 }
 
-/* Center images inside grid items */
-#cards img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 340px; /* Set a max width for images */
-  width: 100%;        /* Makes image responsive */
-  height: auto;      /* Maintains aspect ratio */
+.grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	grid-gap: 5px;
+	align-items: center;
+
+	section {
+		text-align: center;
+		& > * {
+			margin: 0.1rem;
+		}
+	}
+
+	img {
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 340px;
+    width: 100%; 
+    height: auto;
+		border: 1px solid var(--moonstone-2);
+		box-shadow: 0 0 1rem var(--redwood);
+	}
+}
+
+.list {
+  font-size: 0.75rem;
+	display: flex;
+	flex-direction: column;
+  text-align: center;
+
+	section {
+		display: grid;
+		grid-template-columns: 2fr 1fr 1fr;
+		margin: 0;
+		padding: 0.25rem;
+
+		& > * {
+			margin: 0 1rem;
+		}
+
+		img {
+			display: none;
+		}
+
+		h3 {
+			font-size: 1rem;
+		}
+
+		&:nth-child(even) {
+			background-color: color-mix(in srgb, var(--moonstone) 30%, transparent);
+		}
+	}
+}
+
+.highlight{
+  font-weight: 700;
+  color: var(--black);
+}
+
+
+footer{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto; 
+  gap: 10px;
+
+  background-color: var(--moonstone);
+  border-radius: 0 0 10px 10px;
+}
+
+footer img{
+  border-radius: 50%;
+}
+
+#current-year{
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+#lastModified{
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+  text-align: center;
 }
