--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -1,9 +1,18 @@
 @media only screen and (min-width:38rem) {
   body {
-  max-width: 1200px;
-  min-height: 900px;
-  margin: 0 auto;
-  font-family: "Lobster", "Noto Sans", sans-serif;  
+    max-width: 1200px;
+    min-height: 900px;
+    margin: 0 auto;
+    font-family: "Lobster", "Noto Sans", sans-serif;  
+  }
+  header{
+    border-radius: 10px 10px 0 0;
+  }
+
+  header div{
+    margin-left: 5px;
+    padding: 5px;
+    width: fit-content;
   }
 
   #myButton {
