--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -16,21 +16,22 @@
 
 header {
   display: grid;
-  grid-template-columns: 44px auto 44px;
-  grid-template-rows: 1fr;
+  grid-template-columns: 44px auto auto 44px;
   align-items: end;
 }
 
-header section {
-  grid-column: 1/3;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-header section > img {
+header img{
   border-radius: 50%;
   justify-self: center;
   align-self: center;
+}
+
+header button{
+  grid-column: 4/5;
+}
+
+#animateme{
+  grid-column: 1/-1;
 }
 
 #myButton::before {
@@ -62,7 +63,7 @@ header section > img {
 }
 
 ul.menuLinks li a {
-  display: block;
+  display: flex;
   padding: .75rem 2vw;
   color: #fff;
   text-decoration: none;
@@ -85,7 +86,7 @@ ul.menuLinks a:hover {
   color: var(--redwood);
 }
 
-nav {
+nav#animateme {
   display: grid;
   background-color: var(--van-dyke);
   grid-template-rows: 0fr;
@@ -96,7 +97,7 @@ nav ul {
   overflow: hidden;
 }
 
-nav.open {
+nav#animateme.open {
   grid-template-rows: 1fr;
 }
 
