--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -213,17 +213,37 @@ a {
   color: var(--black);
 }
 
-footer {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto auto;
-  gap: 10px;
+footer.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
   background-color: var(--moonstone);
   border-radius: 0 0 10px 10px;
+  padding: 1rem;
+  gap: 1rem;
 }
 
-footer img {
-  border-radius: 50%;
+.footer-info {
+  width: 100%;
+}
+
+.footer-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer-right img {
+  display: none;
+}
+
+.social-icons img{
+  width: 30px;
+  height: 30px;
+  margin: 0 5px;
+  border-radius: 0%;
+  box-shadow: none;
 }
 
 #current-year {
