--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -295,3 +295,47 @@ footer.footer {
   grid-row: 2 / 3;
   text-align: center;
 }
+
+/* weather API*/
+/* h1{
+  text-align: center;
+  color: #3a5250;
+  font-size: 2.5em;
+  margin: 1rem 0;
+} */
+
+.info-panels .panel {
+    background-color: whitesmoke;
+    border-radius: 2%;
+    text-align: center;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    padding: 1rem;
+    margin: 0.5rem;
+  }
+
+.panel h3{
+  color: var(--van-dyke);
+  font-size: 1.5em;
+  margin: .3rem 0;
+}
+
+.card #description{
+  text-transform: capitalize;
+  color: var(--black-2);
+  font-size: 1.2em;
+  margin: .3rem 0;
+}
+
+.card #temperature{
+  color: var(--black-3);
+  font-size: 2rem;
+  margin: .3rem 0;
+}
+
+.card #graphic{
+  width: 100px;
+  height: 100px;
+  background-position: center;
+}
+
+
