--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -34,6 +34,34 @@
   overflow: visible;
   }
 
+  .info-panels {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    margin: 0rem;
+    flex-wrap: wrap; /* for responsiveness */
+  }
+
+  .info-panels .panel {
+    padding: 1rem;
+    background-color: whitesmoke;;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  /* Flex ratios */
+  .panel.events {
+    flex: 2;
+    min-width: 250px;
+  }
+
+  .panel.current-weather,
+  .panel.weather-forecast {
+    flex: 1;
+    min-width: 200px;
+  }
+
+
   footer.footer {
     flex-direction: row; /* Horizontal layout */
     justify-content: space-between;
