--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -4,7 +4,22 @@
     min-height: 900px;
     margin: 0 auto;
     font-family: "Lobster", "Noto Sans", sans-serif;  
+    font-size: clamp(0.7rem, 1.5vw, 1rem);
   }
+  
+  h1 {
+  font-size: clamp(1rem, 3vw, 2rem);
+  color: var(--black);
+  text-align: left;
+  } 
+  
+  h2 {
+    font-size: clamp(1.5rem, 1.5vw, 2rem);
+  }
+  h3 {
+    font-size: clamp(1.2rem, 1vw, 1.5rem);
+  }
+
   header{ 
     border-radius: 10px 10px 0 0;
   }
@@ -38,7 +53,7 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    margin: 0rem;
+    margin: 0.5rem;
     flex-wrap: wrap; /* for responsiveness */
   }
 
