--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -107,11 +107,10 @@ body {
 
 main {
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 100%;
   padding: 20px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.75);
   border: 2px solid var(--redwood);
-  border-radius: 10px;
 }
 
 .hero {
@@ -161,6 +160,7 @@ header {
 
 h1 {
   color: var(--black);
+  text-align: center;
 }
 
 h2 {
@@ -272,12 +272,21 @@ footer.footer {
   display: none;
 }
 
+.social-icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
 .social-icons img{
-  width: 30px;
-  height: 30px;
+  width: 80px;
+  height: 80px;
   margin: 0 5px;
   border-radius: 0%;
   box-shadow: none;
+  display: block;
 }
 
 #current-year {
