--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -130,10 +130,11 @@
   grid-template-areas: 
     "name name"
     "thephoto description"
-    "thephoto address";
+    "thephoto address"
+    "button button";
   }
 
   #allplaces div address {
-    text-align: right;
+    text-align: center;
   }
 }
